# t1_backend

./: .gitignore  Procfile  create_qa_table.py  main.py  pyproject.toml  requirements.txt  reset_database.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/ai_assistant/: AI_ASSISTANT_API.md  idea.md  readme.md  test_assistant_api.py  test_candidate_search.py  test_improved_candidate_search.py  test_json_fix.py  test_scibox.py
app/ai_assistant/course/: bd_course.txt
app/routers/: ai_assistant.py  ai_resume_interview.py  applications.py  auth.py  avatar.py  candidate_selection.py  hr_ai_assistant.py  interviews.py  offers.py  profile.py  qa_session.py  resumes.py  vacancies.py
app/services/: ai_assistant_service.py  async_resume_processor.py  bot.py  candidate_selection_service.py  hr_ai_assistant_service.py  hr_candidate_search_service.py  qa_service.py  resume_analysis_service.py  resume_completion_service.py  resume_gap_analysis_service.py  roadmap_service.py  storage_s3.py  xp_service.py
app/utils/: init_courses.py  load_courses.py
