[project]
name = "vtb-mortech-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.16.5",
    "fastapi==0.116.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic[email]==2.11.9",
    "pydantic-settings==2.10.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.35.0",
    "requests==2.32.5",
    "httpx==0.28.1",
    "python-dotenv==1.1.1",
    "boto3==1.40.35",
    "dotenv==0.9.9",
    "pgvector>=0.4.1",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "bcrypt==4.3.0",
    "botocore==1.40.35",
    "certifi==2025.8.3",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==46.0.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "greenlet==3.2.4 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "idna==3.10",
    "jmespath==1.0.1",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "pyasn1==0.6.1",
    "pycparser==2.23 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "rsa==4.9.1",
    "s3transfer==0.14.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]
